p3-semantics/tests/VarActualWritable.mj.err
 line 3, column 7: error: VAR actual must be a designator
