p3-semantics/tests/VarActualWritable.mj
const c = 0;
def foo(var i: int) {
  foo(c);
}